--- a/Layers/index.html
+++ b/Layers/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Clock</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Digital Clock</title>
+  <link rel="icon" type="image/svg+xml" href="Logo.svg">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="clock-container">
-        <div class="clock">
-            <div id="time" class="time">00:00:00</div>
-            <div id="date" class="date">Monday, January 1, 2025</div>
-        </div>
+  <button class="clock-container" aria-label="Clock button">
+    <div class="clock">
+      <div id="time" class="time">00:00:00</div>
+      <div id="date" class="date">Monday, January 1, 2025</div>
     </div>
-    <script src="script.js"></script>
+  </button>
+
+  <script src="script.js"></script>
 </body>
 </html>
